Fix issue with large area of whitespace between thumbnail and Add Comment area
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@40233 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/components/preview/Image.css
+++ b/root/projects/slingshot/source/web/components/preview/Image.css
@@ -1,6 +1,5 @@
 .web-preview .Image
 {
-   line-height: 325px;
 }
 
 .web-preview .Image img
